--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </div>
     <div class="container">
       <nav id="navbar">
-        <img class="logo" src="small-logo.png" />
+        <a href="#hero"><img class="logo" src="small-logo.png"/></a>
         <div class="nav-links">
-          <a href="#hero">Главная</a>
-          <a href="#about">О нас</a>
-          <a href="#ar">AR</a>
-          <a href="#works">Наши работы</a>
-          <a href="#team">Команда</a>
+          <a class="nav-link" href="#hero">Главная</a>
+          <a class="nav-link" href="#about">О нас</a>
+          <a class="nav-link" href="#ar">AR</a>
+          <a class="nav-link" href="#works">Наши работы</a>
+          <a class="nav-link" href="#team">Команда</a>
         </div>
       </nav>
 
