--- a/svg_index.html
+++ b/svg_index.html
@@ -27,6 +27,9 @@
     <div class="container">
       <nav id="navbar">
         <a href="#hero"><img class="logo" src="small-logo.png" /></a>
+        <button class="nav-toggle" aria-label="Открыть меню">
+          <span class="hamburger-icon"></span>
+        </button>
         <div class="nav-links">
           <a class="nav-link" href="#hero">Главная</a>
           <a class="nav-link" href="#about">О нас</a>
