--- a/svg_index.html
+++ b/svg_index.html
@@ -87,13 +87,13 @@
         <div class="flex-row">
           <div class="ar">
             <div class="flex-col">
-              <img src="3d phone2.png" alt="QR код" />
+              <img src="src/3d phone2.png" alt="QR код" />
             </div>
             <p>Скачав наше приложение,</p>
             <p>ты сможешь посмотреть как работает AR на нашем комиксе ниже!</p>
           </div>
           <div class="qr">
-            <img src="qr.png" alt="QR код" />
+            <img src="src/qr.png" alt="QR код" />
             <a href="#">Скачать приложение</a>
           </div>
         </div>
@@ -108,39 +108,19 @@
         <div class="carousel js-flickity">
           <div class="carousel-cell">
             <div class="carousel-slide-number">1</div>
-            <img src="slide-1.jpg" alt="" />
+            <img src="src/slide-1.jpg" alt="" />
           </div>
           <div class="carousel-cell">
             <div class="carousel-slide-number">2</div>
-            <img src="slide-2.jpg" alt="" />
+            <img src="src/slide-2.jpg" alt="" />
           </div>
           <div class="carousel-cell">
             <div class="carousel-slide-number">3</div>
-            <img src="slide-3.jpg" alt="" />
+            <img src="src/slide-3.jpg" alt="" />
           </div>
           <div class="carousel-cell">
             <div class="carousel-slide-number">4</div>
-            <img src="slide-4.jpg" alt="" />
-          </div>
-          <div class="carousel-cell">
-            <div class="carousel-slide-number">5</div>
-            <img src="slide-4.jpg" alt="" />
-          </div>
-          <div class="carousel-cell">
-            <div class="carousel-slide-number">6</div>
-            <img src="src/1.png" alt="" />
-          </div>
-          <div class="carousel-cell">
-            <div class="carousel-slide-number">7</div>
-            <img src="src/2.png" alt="" />
-          </div>
-          <div class="carousel-cell">
-            <div class="carousel-slide-number">8</div>
-            <img src="src/3.png" alt="" />
-          </div>
-          <div class="carousel-cell">
-            <div class="carousel-slide-number">9</div>
-            <img src="slide-4.jpg" alt="" />
+            <img src="src/slide-4.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -223,7 +203,7 @@
 
           <div class="footer-columns">
             <div class="footer-column footer-info">
-              <img src="small-logo.png" alt="Созвездие" class="footer-logo" />
+              <img src="src/small-logo.png" alt="Созвездие" class="footer-logo" />
               <p class="copyright">© 2025 Созвездие</p>
             </div>
 
