--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
       <nav id="navbar">
-        <a href="#hero"><img class="logo" src="small-logo.png"></a>
+        <a href="#hero"><img class="logo" src="src/small-logo.png"></a>
         <button class="nav-toggle" aria-label="Открыть меню">
           <span class="hamburger-icon"></span>
         </button>
